Fixed toolbar covered by visibility tooltip on backend

--- a/assets/rs-utility-blocks.css
+++ b/assets/rs-utility-blocks.css
@@ -82,7 +82,7 @@ body:not(.front-end) .has-visibility::before {
 	right: -4px;
 	width: auto;
 	height: 1.5em;
-	z-index: 100;
+	z-index: 25;
 	white-space: nowrap;
 	background: rgba(128,128,128,0.5);
 	color: #ffffff;
